added about section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,58 @@
             </div>
         </div>
     </header>
+    <section id="about">
+        <div class="container2">
+            <h1 id="title">Know Me More</h1>
+            <div class="line"></div>
+            <div class="about-content">
+                <div class="about-left">
+                    <h1>I'm <span class="gr">Mohammed Elmir</span>, a Web Developer</h1>
+                    <p>I help you build brand for your business at an affordable price. Thousands of clients have procured exceptional results while working with our dedicated team. when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+
+                        Delivering work within time and budget which meets client’s requirements is our moto. Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. Lorem Ipsum has been the industry's standard dummy text ever when an unknown printer took a galley. Lisque persius interesset in quot quidam possim iriure.</p>
+                </div>
+                <div class="about-right">
+                    <ul>
+                        <li>
+                            <p>Name: </p>
+                            <p class="light">Mohammed Elmir</p>
+                        </li>
+                        <li>
+                            <p>Email: </p>
+                            <p class="light">mohammedelmir594@gmail.com</p>
+                        </li>
+                        <li>
+                            <p>Age: </p>
+                            <p class="light">20</p>
+                        </li>
+                        <li>
+                            <p>From: </p>
+                            <p class="light">Acrra, Ghana</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div id="stats">
+                <div class="stat">
+                    <p class="large">2 +</p>
+                    <p class="light">Years Of Experience</p>
+                </div>
+                <div class="stat">
+                    <p class="large">10 +</p>
+                    <p class="light">Happy Clients</p>
+                </div>
+                <div class="stat">
+                    <p class="large">15 +</p>
+                    <p class="light">Project Done</p>
+                </div>
+                <div class="stat">
+                    <p class="large">5 +</p>
+                    <p class="light">New Projects</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="https://kit.fontawesome.com/ea129587c4.js" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
