what i do section added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="about-content">
                 <div class="about-left">
                     <h1>I'm <span class="gr">Mohammed Elmir</span>, a Web Developer</h1>
-                    <p>I help you build brand for your business at an affordable price. Thousands of clients have procured exceptional results while working with our dedicated team. when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    <p class="light">I help you build brand for your business at an affordable price. Thousands of clients have procured exceptional results while working with our dedicated team. when an unknown printer took a galley of type and scrambled it to make a type specimen book.
 
                         Delivering work within time and budget which meets client’s requirements is our moto. Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure. Lorem Ipsum has been the industry's standard dummy text ever when an unknown printer took a galley. Lisque persius interesset in quot quidam possim iriure.</p>
                 </div>
@@ -102,6 +102,58 @@
                 <div class="stat">
                     <p class="large">5 +</p>
                     <p class="light">New Projects</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="what_i_do">
+        <h1>What I Do</h1>
+        <div class="line"></div>
+        <div class="container2 do-content">
+            <div class="do-left">
+                <div class="b-1">
+                    <i class="fas fa-desktop"></i>
+                    <div>
+                        <h1>Web Design</h1>
+                        <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+                    </div>
+                </div>
+                <div class="b-1">
+                    <i class="fas fa-mobile"></i>
+                    <div>
+                        <h1>Mobile Devlopment</h1>
+                        <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+                    </div>
+                </div>
+                <div class="b-1">
+                    <i class="fas fa-chart-bar"></i>
+                    <div>
+                        <h1>Data Science</h1>
+                        <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="do-right">
+                <div class="b-1">
+                    <i class="fas fa-desktop"></i>
+                    <div>
+                        <h1>Web Design</h1>
+                        <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+                    </div>
+                </div>
+                <div class="b-1">
+                    <i class="fas fa-mobile"></i>
+                    <div>
+                        <h1>Mobile Devlopment</h1>
+                        <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+                    </div>
+                </div>
+                <div class="b-1">
+                    <i class="fas fa-chart-bar"></i>
+                    <div>
+                        <h1>Data Science</h1>
+                        <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+                    </div>
                 </div>
             </div>
         </div>
