added resume section

--- a/index.html
+++ b/index.html
@@ -158,6 +158,47 @@
             </div>
         </div>
     </section>
+    <section id="resume">
+        <h1>RESUME</h1>
+        <div class="line"></div>
+        <div class="container2 resume-content">
+            <div id="education">
+                <h2 class="res-tit">My Education</h2>
+                <div class="flex">
+                    <div class="box">
+                        <div class="date">2020-2024</div>
+                        <h2>Computer Engineering</h2>
+                        <p class="red">Ashesi University</p>
+                        <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+                    </div>
+                    <div class="box">
+                        <div class="date">2020-2021</div>
+                        <h2>Javascript Developer</h2>
+                        <p class="red">Udemy</p>
+                        <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+                    </div>
+                </div>
+            </div>
+            <div id="experience">
+                <h2 class="res-tit">My Experience</h2>
+                <div class="flex">
+                    <div class="box">
+                        <div class="date">2020-2021</div>
+                        <h2>Front End Developer</h2>
+                        <p class="red">Theme Forest</p>
+                        <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+                    </div>
+                    <div class="box">
+                        <div class="date">2020-2021</div>
+                        <h2>Backend Developer</h2>
+                        <p class="red">Udemy</p>
+                        <p>Lisque persius interesset his et, in quot quidam persequeris vim, ad mea essent possim iriure.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a href="cv/cv.pdf" download class="download">Download CV <i class="fas fa-download"></i></a>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="https://kit.fontawesome.com/ea129587c4.js" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
