contact page added

--- a/index.html
+++ b/index.html
@@ -303,6 +303,53 @@
             </div>
         </div>
     </section>
+    <section id="contact"> 
+        <h1 class="contact-title">Get in Contact</h1>
+        <div class="line"></div>
+        <div class="container2 contact-content">
+            <div id="address">
+                <h1>Address</h1>
+                <p>Accra, Ghana</p>
+                <ul class="details">
+                    <li>
+                        <i class="fas fa-phone"></i>
+                        <p>(020) 398 6666</p>
+                    </li>
+                    <li>
+                        <i class="fas fa-envelope"></i>
+                        <p>mohammedelmir594@gmail.com</p>
+                    </li>
+                </ul>
+                <ul id="follow">
+                    <h1>FOLLOW ME</h1>
+                    <div id="contact-icon">
+                        <a href="https://twitter.com/ElmirMohammed11" target="_blank">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="https://github.com/Knight-Khode" target="_blank">
+                            <i class="fab fa-github"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/elmir-mohammed-82b9201b7/" target="_blank">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                    </div>
+                </ul>
+            </div>
+            <form>
+                <h1>SEND US A NOTE</h1>
+                <div class="form-group">
+                    <input type="text" placeholder="Name">
+                    <input type="email" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <textarea name="message" id="" cols="30" rows="10"></textarea>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Send Message">
+                </div>
+            </form>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="https://kit.fontawesome.com/ea129587c4.js" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
