ready for hosting

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                     </h1>
                     <ul class="nav-menu">
                         <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
-                        <li class="nav-item"><a href="#home" class="nav-link">About</a></li>
-                        <li class="nav-item"><a href="#home" class="nav-link">What I Do</a></li>
-                        <li class="nav-item"><a href="#home" class="nav-link">Resume</a></li>
-                        <li class="nav-item"><a href="#home" class="nav-link">Portfolio</a></li>
-                        <li class="nav-item"><a href="#home" class="nav-link">Client</a></li>
-                        <li class="nav-item"><a href="#home" class="nav-link">Contact</a></li>
+                        <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="#what_i_do" class="nav-link">What I Do</a></li>
+                        <li class="nav-item"><a href="#resume" class="nav-link">Resume</a></li>
+                        <li class="nav-item"><a href="#work" class="nav-link">Portfolio</a></li>
+                        <li class="nav-item"><a href="#client" class="nav-link">Client</a></li>
+                        <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
                     </ul>
                     <div class="hamburger">
                         <span class="bar"></span>
@@ -209,7 +209,7 @@
                 </div>
                 <div class="work-text">
                     <p>Backend For Social App</p>
-                    <a href="#">View Code</a>
+                    <a href="https://github.com/Knight-Khode/DEV-CONNECTOR" target="_blank">View Code</a>
                 </div>
             </div>
             <div class="box">
@@ -218,7 +218,7 @@
                 </div>
                 <div class="work-text">
                     <p>Github User finder</p>
-                    <a href="#">View Code</a>
+                    <a href="https://github.com/Knight-Khode/Github-Finder" target="_blank">View Code</a>
                 </div>
             </div>
             <div class="box">
@@ -227,7 +227,7 @@
                 </div>
                 <div class="work-text">
                     <p>Covid-19 Case Tracker</p>
-                    <a href="#">View Code</a>
+                    <a href="https://github.com/Knight-Khode/covid-stats" target="_blank">View Code</a>
                 </div>
             </div>
             <div class="box">
@@ -236,7 +236,7 @@
                 </div>
                 <div class="work-text back1">
                     <p>Girl Up website</p>
-                    <a href="#">View Code</a>
+                    <a href="https://github.com/Knight-Khode/Girl-Up" target="_blank">View Code</a>
                 </div>
             </div>
             <div class="box">
@@ -245,7 +245,7 @@
                 </div>
                 <div class="work-text">
                     <p>Education 360 Website</p>
-                    <a href="#">View Code</a>
+                    <a href="https://github.com/Knight-Khode/Education-360-Website" target="_blank">View Code</a>
                 </div>
             </div>
             <div class="box">
@@ -254,7 +254,7 @@
                 </div>
                 <div class="work-text">
                     <p>Award Webiste</p>
-                    <a href="#">View Code</a>
+                    <a href="https://github.com/Knight-Khode/Award-Website" target="_blank">View Code</a>
                 </div>
             </div>
         </div>
@@ -350,6 +350,9 @@
             </form>
         </div>
     </section>
+    <footer id="footer">
+        <p>Copyright © 2021 <span class="gr">Mohammed Elmir</span>. All Rights Reserved.</p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="https://kit.fontawesome.com/ea129587c4.js" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
